# test_technique

./: .gitignore  README.md  REPORT.md  SETUP.md  docker-compose.yml  init_data.py  init_data.sh  pyproject.toml  run.sh
app/: Chatbot.py
app/pages/: 1_Documents.py
core/: config.py  embeddings.py  preprocessing.py  setup.py  types.py  utils.py
core/pipeline/: generator.py  guardrails.py  hyde.py  pipeline.py  reranker.py  rewriter.py  title.py
core/pipeline/prompts/: generator.py  guardrails.py  hyde.py  rewriter.py  title.py
core/vector_store/: documents_manager.py  elastic_client.py  history.py  logger.py  mappings.py  retriever.py
