[project]
name = "test-technique"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "dotenv>=0.9.9",
    "elasticsearch>=9.2.0",
    "langchain>=1.0.5",
    "langchain-openai>=1.0.2",
    "langsmith>=0.4.42",
    "pandas>=2.3.3",
    "pydantic>=2.12.4",
    "pytest>=9.0.1",
    "sentence-transformers>=5.1.2",
    "streamlit>=1.51.0",
    "transformers>=4.57.1",
]


[tool.pytest.ini_options]
pythonpath = [
    "app",
    "."
]
